--- a/src/app/comp/node-inspector/node-inspector.component.html
+++ b/src/app/comp/node-inspector/node-inspector.component.html
@@ -14,6 +14,9 @@
         </button>
     </app-node-inspector-config-node>
     }
+    @case ('JobTypes') {
+
+    }
     @case ('PSetItems') {
     <app-node-inspector-pset-node [nodeItem]="$any(node.nodeitem)" [searchResult]="searchResult"
         (onChangeColor)="node.color = (node.color == colorpalette.length - 1 ? 0 : node.color + 1)">
@@ -25,7 +28,30 @@
         </button>
     </app-node-inspector-pset-node>
     }
-    @default {
+    @case ('WorkflowItems') {
+
+    }
+    @case ('CertStoreItems') {
+
+    }
+    @case ('IppDevices') {
+
+    }
+    @case ('ServerConfig') {
+    <app-node-inspector-serverprops-node [nodeItem]="$any(node.nodeitem)" [searchResult]="searchResult"
+        (onChangeColor)="node.color = (node.color == colorpalette.length - 1 ? 0 : node.color + 1)">
+        <button type="button" class="btn btn-sm px-2" cdkDragHandle>
+            <i class="bi bi-arrows-move"></i>
+        </button>
+        <button type="button" class="btn btn-sm px-2" (click)="onRemoveNode($index, node.id)">
+            <i class="bi bi-x-lg"></i>
+        </button>
+    </app-node-inspector-serverprops-node>
+    }
+    @case ('ServerInformation') {
+
+    }
+    @case ('Users') {
 
     }
     }
