--- a/src/app/comp/result/result.component.html
+++ b/src/app/comp/result/result.component.html
@@ -178,7 +178,7 @@
                         <app-result-serverprops [searchResult]="searchResult"></app-result-serverprops>
                         }
                         @case ('ServerInformation') {
-
+                        <app-result-serverinfo [searchResult]="searchResult"></app-result-serverinfo>
                         }
                         @case ('Users') {
 
