--- a/src/app/comp/node-inspector/pset-node/pset-node.component.html
+++ b/src/app/comp/node-inspector/pset-node/pset-node.component.html
@@ -1,7 +1,7 @@
 <div class="card-header d-flex align-items-center justify-content-between">
     <div>
         <div class="fs-8 mb-1">
-            <i class="bi bi-c-square-fill me-1"></i>
+            <i class="bi bi-p-square-fill me-1"></i>
             {{ l10nphrase.result.parameterset.nodeInspector.subject }}
         </div>
         <h5 class="mb-0" [innerHTML]="nodeItem.name | highlight: searchResult.search.phrase"></h5>
