--- a/src/app/comp/result/result.component.html
+++ b/src/app/comp/result/result.component.html
@@ -181,7 +181,7 @@
                         <app-result-serverinfo [searchResult]="searchResult"></app-result-serverinfo>
                         }
                         @case ('Users') {
-
+                        <app-result-user [searchResult]="searchResult"></app-result-user>
                         }
                         @default {
                         <app-result-overview [searchResult]="searchResult" [totalMatchCount]="totalMatchCount"
