--- a/src/app/comp/main/main.component.html
+++ b/src/app/comp/main/main.component.html
@@ -1,6 +1,10 @@
 <app-navbar></app-navbar>
 <app-progressbar></app-progressbar>
-
+@if (missingScope) {
+<app-scope-warning-bar></app-scope-warning-bar>
+}
+@else {
 <div class="container-fluid pt-3 pb-5">
     <router-outlet></router-outlet>
 </div>
+}
