fix zindex overlapping navbar dropdowns

--- a/src/app/comp/result/result.component.html
+++ b/src/app/comp/result/result.component.html
@@ -194,7 +194,7 @@
                         }
                     </div>
                     <div class="d-none d-lg-block" style="max-width: 50vw;">
-                        <div class="sticky-top pe-3" style="top: 2rem;">
+                        <div class="sticky-top pe-3" style="top: 2rem; z-index: 99;">
                             <app-node-inspector [searchResult]="searchResult"></app-node-inspector>
                         </div>
                     </div>
