improved disable-functionality

--- a/src/app/comp/main/scope-warning-bar/scope-warning-bar.component.html
+++ b/src/app/comp/main/scope-warning-bar/scope-warning-bar.component.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-expand-lg bg-primary">
+<nav class="navbar navbar-expand-lg bg-primary py-5">
     <div class="container-fluid flex-column">
-        <strong class="me-2">{{ l10nphrase.home.disabledFindr.title }}</strong>
+        <h1 class="me-2 mb-4">{{ l10nphrase.home.disabledFindr.title }}</h1>
         <span>
             {{ l10nphrase.home.disabledFindr.description }}
         </span>
