--- a/src/app/comp/main/navbar/navbar.component.html
+++ b/src/app/comp/main/navbar/navbar.component.html
@@ -87,8 +87,8 @@
                         <li class="dropdown-item">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" formControlName="searchCertstore"
-                                    id="home-search-certstore" name="home-search-certstore">
-                                <label class="form-check-label" for="home-search-certstore">
+                                    id="navbar-search-certstore" name="navbar-search-certstore">
+                                <label class="form-check-label" for="navbar-search-certstore">
                                     {{ l10nphrase.search.topics.certstore }}
                                 </label>
                             </div>
@@ -96,8 +96,8 @@
                         <li class="dropdown-item">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" formControlName="searchServerConfig"
-                                    id="home-search-serverConfig" name="home-search-serverConfig">
-                                <label class="form-check-label" for="home-search-serverConfig">
+                                    id="navbar-search-serverConfig" name="navbar-search-serverConfig">
+                                <label class="form-check-label" for="navbar-search-serverConfig">
                                     {{ l10nphrase.search.topics.serverConfig }}
                                 </label>
                             </div>
@@ -105,8 +105,8 @@
                         <li class="dropdown-item">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" formControlName="searchServerInfo"
-                                    id="home-search-serverInfo" name="home-search-serverInfo">
-                                <label class="form-check-label" for="home-search-serverInfo">
+                                    id="navbar-search-serverInfo" name="navbar-search-serverInfo">
+                                <label class="form-check-label" for="navbar-search-serverInfo">
                                     {{ l10nphrase.search.topics.serverInfo }}
                                 </label>
                             </div>
@@ -114,8 +114,8 @@
                         <li class="dropdown-item">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" formControlName="searchIppDevices"
-                                    id="home-search-ippDevices" name="home-search-ippDevices">
-                                <label class="form-check-label" for="home-search-ippDevices">
+                                    id="navbar-search-ippDevices" name="navbar-search-ippDevices">
+                                <label class="form-check-label" for="navbar-search-ippDevices">
                                     {{ l10nphrase.search.topics.ippDevices }}
                                 </label>
                             </div>
@@ -123,8 +123,8 @@
                         <li class="dropdown-item">
                             <div class="form-check">
                                 <input class="form-check-input" type="checkbox" formControlName="searchUsers"
-                                    id="home-search-users" name="home-search-users">
-                                <label class="form-check-label" for="home-search-users">
+                                    id="navbar-search-users" name="navbar-search-users">
+                                <label class="form-check-label" for="navbar-search-users">
                                     {{ l10nphrase.search.topics.users }}
                                 </label>
                             </div>
