--- a/src/app/comp/node-inspector/pset-node/pset-node.component.html
+++ b/src/app/comp/node-inspector/pset-node/pset-node.component.html
@@ -16,11 +16,11 @@
 <div class="card-body p-0">
     <table class="table table-sm table-hover m-0">
         <tbody>
-            <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.path"
+            <tr nodeinspector-common-table-node [title]="l10nphrase.result.parameterset.nodeInspector.path"
                 [valueToCopy]="getValueToCopy(psetPath)">
                 <code>{{psetPath}}</code>
             </tr>
-            <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.uuid"
+            <tr nodeinspector-common-table-node [title]="l10nphrase.result.parameterset.nodeInspector.uuid"
                 [valueToCopy]="nodeItem.uuid">
                 @if (searchResult.search.filter.includeUuids) {
                 <code [innerHTML]="nodeItem.uuid | highlight: searchResult.search.phrase"></code>
@@ -29,15 +29,15 @@
                 <code>{{nodeItem.uuid}}</code>
                 }
             </tr>
-            <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.type"
+            <tr nodeinspector-common-table-node [title]="l10nphrase.result.parameterset.nodeInspector.type"
                 [valueToCopy]="nodeItem.type">
                 <code>{{nodeItem.type}}</code>
             </tr>
-            <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.value"
+            <tr nodeinspector-common-table-node [title]="l10nphrase.result.parameterset.nodeInspector.value"
                 [valueToCopy]="nodeItem.value || undefined">
                 <code [innerHTML]="nodeItem.value || '&lt;null&gt;' | highlight: searchResult.search.phrase"></code>
             </tr>
-            <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.description"
+            <tr nodeinspector-common-table-node [title]="l10nphrase.result.parameterset.nodeInspector.description"
                 [valueToCopy]="nodeItem.description || undefined">
                 @if (!searchResult.search.filter.excludeBComments || !nodeItem.description?.startsWith('[B]')) {
                 <code [innerHTML]="nodeItem.description | highlight: searchResult.search.phrase"></code>
@@ -46,7 +46,7 @@
                 <code>{{nodeItem.description}}</code>
                 }
             </tr>
-            <tr nodeinspector-common-table-node [title]="l10nphrase.result.config.nodeInspector.modified"
+            <tr nodeinspector-common-table-node [title]="l10nphrase.result.parameterset.nodeInspector.modified"
                 [valueToCopy]="nodeItem.modifiedtime || undefined">
                 <code>{{nodeItem.modifiedtime}}</code>
             </tr>
