--- a/src/app/comp/result/workflows/workflows.component.html
+++ b/src/app/comp/result/workflows/workflows.component.html
@@ -8,11 +8,11 @@
                 (click)="selectNode(item)">
                 <strong [innerHTML]="item.name | highlight: searchResult.search.phrase"></strong>
             </td>
-            <td>
+            <td class="text-end">
                 <a target="_blank" [href]="'#workflow?uuid=' + item.uuid">
                     <button type="button" class="btn btn-sm">
-                        <i class="bi bi-diagram-2-fill me-1"></i>
-                        Workflow anzeigen
+                        <i class="bi bi-box-arrow-up-right me-1"></i>
+                        {{ l10nphrase.result.showWorkflow }}
                     </button>
                 </a>
             </td>
